# rusty-bot

./: Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: audio_manager.rs  cached_sound.rs  end_play_sound.rs  lib.rs  sound_store.rs
audio/src/commands/: mod.rs  poomp.rs
bot/: Cargo.toml
bot/src/: bot.rs  handler.rs  lib.rs
common/: Cargo.toml
common/src/: hooks.rs  lib.rs
common/src/commands/: clear.rs  flood.rs  mod.rs  mooscles.rs
config/: Cargo.toml
config/src/: config_builder.rs  config_store.rs  configuration.rs  lib.rs
config/src/commands/: mod.rs  set.rs  show.rs
rustybot/: Cargo.toml
src/: main.rs
src/bot/: audio.rs  config.rs  handler.rs  mod.rs
src/bot/core/: infos.rs  mod.rs  plugins.rs
src/bot/traits/: expandable.rs  mod.rs  plugin.rs
src/commands/: config.rs  general.rs  help.rs  mod.rs
