[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
author = "Thomas Durand <durandthomas@protonmail.com>"
repository = "https://github.com/reede-dotpng/rusty-bot"
homepage = "https://github.com/reede-dotpng/rusty-bot"
categories = ["discord-bot"]
exclude = ["/.github/*"]


[workspace]
members = ["audio", "bot", "config", "common"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
text = []
audio = []
default = ["text"]


[dependencies]
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
tracing-futures = "0.2.5"

bot = {path = "./bot"}

[dependencies.tokio]
version = "1.13.0"
features = ["macros","rt-multi-thread", "signal"]


[profile.dev]
opt-level=1

[profile.release]
opt-level=3
